changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Move function is_legal_2ways_exit() to relevant file, remove legacy function.
 include/sproto.h
 server/apply.c
 types/exit/exit.c
Nicolas Weeger 2008-03-30

Extract blindness to its own file.
 include/sproto.h typesproto.h
 server/ob_types.c time.c
 types/legacy/process.c
 types/Makefile.am
Added file:
 types/blindness/blindness.c
Nicolas Weeger 2008-03-30

Change test order to speed up some, fix comments.
 server/c_object.c
Nicolas Weeger 2008-03-30

Rename a few xxx_player() functions to xxx_living() for coherence.
 include/sproto.h
 server/apply.c attack.c skills.c spell_effect.c spell_util.c
Nicolas Weeger 2008-03-30

Remove global variables. Make functions static.
 random_maps/maze_gen.c maze_gen.h rproto.h
Nicolas Weeger 2008-03-30

Remove unused parameter, rename to better name.
 server/attack.c
Nicolas Weeger 2008-03-30

Extract player_changer to its own file.
 include/sproto.h typesproto.h
 server/ob_types.c time.c
 types/legacy/process.c
 types/Makefile.am
Added file:
 types/player_changer/player_changer.c
Nicolas Weeger 2008-03-29

Remove obsolete code, tweak comment.
 server/time.c
Nicolas Weeger 2008-03-29

Remove autohook inserted in items, and use was_destroyed() to check item's validity.
 plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
 plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.
 plugins/cfpython/cfpython_object.c: remove autohook stuff, use item's count.
 plugins/cfpython/cfpython.c: remove autohook handling.
Nicolas Weeger 2008-03-29

Tweak documentation generation.