@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+common/living.c: remove unneeded test.
+Nicolas Weeger 2008-03-30
+
 Move function is_legal_2ways_exit() to relevant file, remove legacy function.
  include/sproto.h
  server/apply.c
